# excalidraw-ai-agent

./: .env.example  .env.production.example  .gitignore  KNOWN_ISSUES.md  README.md  eval_mental_model.md  package-lock.json  package.json  story_package_meta_excalidraw_ai_agent.md  tsconfig.app.json
docs/: DEPLOYMENT.md
evals/: diagram.eval.ts
evals/datasets/: golden_2.json
evals/scorers/: boundArrows.ts  boundLabels.ts  connectivity.ts  noOverlaps.ts  schema.ts  toolChoice.ts
python_agent/: IMPLEMENTATION_PLAN.md  WEAK_SPOTS.md  WORKING_LOG.md  main.py  pyproject.toml
python_agent/src/diagram_agent/: agent.py  api.py  braintrust_export.py  canvas.py  cli.py  evals.py  flywheel.py  modal_app.py  openai_client.py  planner.py  prompts.py  schemas.py  tools.py  tracing.py
python_agent/src/tests/: test_agent.py  test_api.py  test_braintrust_export.py  test_canvas.py  test_cli.py  test_flywheel.py  test_openai_client.py  test_planner.py  test_prompt.py  test_schemas.py  test_tools.py  test_tracing.py
scripts/: update-golden.mjs
src/: App.css  App.tsx  agent-core.ts  agent.ts  tools.ts  vite-env.d.ts
src/components/chat/: ChatPanel.tsx  MessageBubble.tsx  MessageList.tsx  TracePanel.tsx  chat.css
src/context/: applySkeleton.ts  canvas-state.ts  cross-call-bindings.ts  overlaps.ts
src/tools/: add-elements.ts  element-schema.ts  remove-elements.ts  update-elements.ts
