[project]
name = "python-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "braintrust>=0.23.0",
    "fastapi>=0.124.0",
    "modal>=1.2.4",
    "openai>=2.38.0",
    "pydantic>=2.13.4",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "ruff>=0.15.14",
    "typer>=0.26.2",
    "uvicorn>=0.38.0",
]

[project.scripts]
diagram-agent = "diagram_agent.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/diagram_agent"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["src/tests"]
